# ai-assistant

./: .gitignore  CODEOWNERS  LICENSE  Modefile  README.md  docker-compose.yaml  pyproject.toml
agent/: __init__.py  main.py
agent/benchmark/: benchmark_questions.csv  llama3.1_deepvk_results.csv  llama3.1_results.csv  llm_metrics_llama3.1.json  llm_metrics_llama3.1_deepvk.json  llm_metrics_mistral_deepvk.json  main.py  metrics_llama3.1.json  metrics_mistral_deepvk.json  mistral_deepvk_results.csv  scores_llama3.1.json  scores_llama3.1_deepvk.json
agent/data_proc/: data_processing.ipynb  methods.py  resources.py
agent/database/: data_qa_processed.csv  initialize_database.py  original_data.csv  retriever.py
agent/db/: init_db.py
agent/examples/: llama_from_huggingface.py  llm_usage.py
agent/experiments/: experiment-finetuning1.ipynb
agent/graphs/: __init__.py  consultant_graph.py  state.py
agent/llms/: _base.py  llama.py
agent/nodes/: __init__.py  _base.py
agent/nodes/answer_node/: answer_node.py  prompt.py
agent/nodes/classifier_node/: prompt.py  (+1 more)
backend/: Dockerfile  README.md  app.py  celery_worker.py  pipeline.py  requirements.txt  run.py  schema.py  test.ipynb  text_generator.py  utils.py
backend/agent/: main.py
backend/config/: model_config.yaml
backend/notebooks/: note_1.ipynb
frontend/: Dockerfile  angular.json  package-lock.json  package.json
frontend/docs/: index.html  main.23ef03b5561e922e.js  polyfills.f42e8324c5c7cbb0.js  styles.8d80222ea863b470.css
frontend/nginx/: nginx.conf
frontend/src/: App.tsx  styles.scss  Сhat.tsx
(+56 files in other folders)
