[tool.poetry]
name = "ai-assistant"
packages = [{include = "agent"}]
version = "0.1.0"
description = ""
authors = ["EgorBodrov <bodroff.e.a@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
transformers = "4.44.2"
langchain = "0.2.16"
langchain-huggingface = "0.0.3"
langchain-ollama = "0.1.3"
langgraph = "0.2.18"
qdrant-client = "^1.11.1"
pandas = "2.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
